@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<!-- generated by wxGlade 0.4 on Sun Dec 11 14:51:00 2005 -->
+<!-- generated by wxGlade 0.4cvs on Wed Dec 28 18:24:36 2005 -->
 
 <application path="../../resources/dialogs/videocontrols.xrc" name="" class="" option="0" language="XRC" top_window="" encoding="ISO-8859-1" use_gettext="0" overwrite="0" use_new_namespace="0" for_version="2.6">
     <object class="wxPanel" name="VideoControlPage" base="EditTopLevelPanel">
@@ -207,7 +207,7 @@
                                                                         </object>
                                                                     </object>
                                                                     <object class="sizeritem">
-                                                                        <flag>wxADJUST_MINSIZE</flag>
+                                                                        <flag>wxALIGN_CENTER_VERTICAL|wxADJUST_MINSIZE</flag>
                                                                         <border>0</border>
                                                                         <option>0</option>
                                                                         <object class="wxStaticText" name="times" base="EditStaticText">
